[gd_scene load_steps=13 format=3 uid="uid://dxa8iwdognc3s"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_iynm3"]
[ext_resource type="Texture2D" uid="uid://b2gyy6j7gnec" path="res://assets/board/wood-1700562_1920.png" id="2_5ijox"]
[ext_resource type="PackedScene" uid="uid://s5y0n8ui2te5" path="res://scenes/card.tscn" id="2_rgjke"]
[ext_resource type="PackedScene" uid="uid://bt4kdi4xf8ibg" path="res://scenes/card_slot.tscn" id="3_a1rqx"]
[ext_resource type="PackedScene" uid="uid://b25bduh74s0yi" path="res://scenes/slot_area.tscn" id="4_u43ui"]
[ext_resource type="PackedScene" uid="uid://boi5nq67jymdy" path="res://scenes/hand.tscn" id="5_vux35"]
[ext_resource type="LabelSettings" uid="uid://cghp14nr0jpow" path="res://scenes/styles/DebugLabel.tres" id="6_tsvdr"]
[ext_resource type="PackedScene" uid="uid://cd6d1rdel2vgx" path="res://scenes/bell_button.tscn" id="7_bu5qr"]
[ext_resource type="Shader" path="res://assets/shaders/CRTBis.gdshader" id="8_8n1q6"]
[ext_resource type="Shader" path="res://assets/shaders/Vignette.gdshader" id="9_ff3lv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nxjqi"]
shader = ExtResource("8_8n1q6")
shader_parameter/scanline_count = 50.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yhj8r"]
shader = ExtResource("9_ff3lv")
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/multiplier = 0.4
shader_parameter/softness = 0.8

[node name="Main" type="Node"]
script = ExtResource("1_iynm3")
cardScene = ExtResource("2_rgjke")
slotScene = ExtResource("3_a1rqx")

[node name="BackGroundBoard" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_5ijox")
stretch_mode = 6
metadata/_edit_lock_ = true

[node name="PlayedSlot" parent="." instance=ExtResource("3_a1rqx")]
unique_name_in_owner = true
offset_left = 280.0
offset_top = 426.0
offset_right = 434.0
offset_bottom = 652.0
allow_drop = false
allow_sacrifice = false

[node name="SlotArea" parent="." instance=ExtResource("4_u43ui")]
offset_left = 614.0
offset_top = 60.0
offset_right = -708.0
offset_bottom = -141.0

[node name="CardLayer" type="Node" parent="."]

[node name="Hand" parent="." instance=ExtResource("5_vux35")]
offset_left = -62.0
offset_top = 424.0
offset_right = 938.0
offset_bottom = 624.0

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthScale" type="Label" parent="GUI"]
layout_mode = 0
offset_left = 227.0
offset_top = 778.0
offset_right = 345.0
offset_bottom = 861.0
text = "7"
label_settings = ExtResource("6_tsvdr")

[node name="BellButton" parent="GUI" instance=ExtResource("7_bu5qr")]
position = Vector2(100, 553)

[node name="CRT" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_nxjqi")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Vignette" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_yhj8r")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true
